# strip_interactive

./: .pre-commit-config.yaml  README.md  example.py  pyproject.toml
strip_interactive/: __init__.py  strip_interactive.py
tests/: test_strip_interactive.py
