[tool.poetry]
name = "strip-interactive"
version = "0.1.2"
description = "Strip and execute interactive Python string"
authors = ["khuyentran1401 <khuyentran1476@gmail.com>"]
homepage = "https://github.com/khuyentran1401/strip_interactive"
repository = "https://github.com/khuyentran1401/strip_interactive"
keywords = ["string", "interactive", "shell"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
numpy = "^1.20.2"
loguru = "^0.5.3"
snoop = "^0.3.0"
simpy = "^4.0.1"
pandas = "^1.2.4"
pre-commit = "^2.12.1"
black = "^21.5b0"
flake8 = "^3.9.2"
isort = "^5.8.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
